--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<main>
 			<div id="main">
 				<div class="top-contaner">
+					<p><img class="top-img" src="img/top.png"></p>
 					<h1>PORFOLIO<br>KAMBARA MIKIYA</h1>
-					<img class="top-img" src="img/top.png">
 				</div>
 				<div id="works-contaner">
 					<h2>Works</h2>
