--- a/detail/LONY&JOW/index.html
+++ b/detail/LONY&JOW/index.html
@@ -16,7 +16,11 @@
    					<input id="nav-input" type="checkbox" class="nav-unshown">
       				<label id="nav-open" for="nav-input"><span></span></label>
       				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
- 		    		<div id="nav-content">ここに中身を入れる</div>
+ 		    		<div id="nav-content">
+ 		    			<p><a href="../index#works-contaner">Works</a></p>
+ 		    			<p><a href="../index#skill-contaner">Skill</a></p>
+ 		    			<p><a href="../index#profile-contaner">Profile</a></p>
+ 		    		</div>
   				</div>
 			</nav>	
 		</div>
