--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 	   					<input id="nav-input" type="checkbox" class="nav-unshown">
 	      				<label id="nav-open" for="nav-input"><span></span></label>
 	      				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
-	 		    		<div id="nav-content">ここに中身を入れる</div>
+	 		    		<div id="nav-content">
+	 		    			<p><a href="#works-contaner">Works</a></p>
+	 		    			<p><a href="#skill-contaner">Skill</a></p>
+	 		    			<p><a href="#profile-contaner">Profile</a></p>
+	 		    		</div>
 	  				</div>
 				</nav>	
 			</div>
