--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div id="main">
 				<div class="top-contaner">
 					<p><img class="top-img" src="img/top.png"></p>
-					<h1>PORFOLIO<br>KAMBARA MIKIYA</h1>
+					<h1>PORTFOLIO<br>KAMBARA MIKIYA</h1>
 				</div>
 				<div id="works-contaner">
 					<h2>Works</h2>
@@ -100,7 +100,7 @@
 					</div>
 					<div class="contaner-right">
 						<h3 class="name">神原 未希哉<span class="name-eng">Kambara Mikiya</span></h3>
-						<p>日本大学 生産工学部 数理情報工学科 メディアデザインコース 大学3回生。<br>コーディングではHTML&CSS&Javascript&JQueryを触れることが多いいです。<br>他の言語はPHP&Pythonを扱うことができます。</p>
+						<p>日本大学 生産工学部 数理情報工学科 メディアデザインコース 大学3回生。<br>コーディングではHTML&CSS&Javascript&JQueryを触れることが多いいですが、<br>他の言語はPHP&Pythonを扱うことができます。</p>
 					</div>
 				</div>
 		</main>
