--- a/index.html
+++ b/index.html
@@ -66,29 +66,56 @@
 					<ul>
 						<li>
 							<h3>HTML5</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○○○●</div>
+							</div>
 						</li>
 						<li>
 							<h3>CSS3</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○○○●</div>
+							</div>
 						</li>
 						<li>
 							<h3>Javascript</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○●●●/div>
+							</div>
 						<li>
 							<h3>PHP</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○○●●</div>
+							</div>
 						</li>
 						<li>
 							<h3>MySQL</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○●●●</div>
+							</div>
 						</li>
 						<li>
 							<h3>Python</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○●●●</div>
+							</div>							
 						</li>
 						<li>
 							<h3>C言語</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○○●●</div>
+							</div>
 						</li>
 						<li>
 							<h3>Illustrator</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○●●●</div>
+							</div>
 						</li>
 						<li>
 							<h3>Photoshop</h3>
+							<div class="mask-contaner">
+								<div class="mask-inner">○○○●●</div>
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -112,3 +139,4 @@
 	</div>
 	
 </body>
+</html>
