--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<li>
 							<h3>Javascript</h3>
 							<div class="mask-contaner">
-								<div class="mask-inner">○○●●●/div>
+								<div class="mask-inner">○○●●●</div>
 							</div>
 						<li>
 							<h3>PHP</h3>
