--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
 <body>
 	<div id="wrap">
 		<header>
@@ -61,7 +62,7 @@
 						</li>
 					</ul>
 				</div>
-				<div id="skill-contaner">
+				<div id="skill-contaner" ontouchstart="">
 					<h2>Skill</h2>
 					<ul>
 						<li>
