--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
+
 <body>
 	<div id="wrap">
 		<header>
@@ -19,9 +21,9 @@
 	      				<label id="nav-open" for="nav-input"><span></span></label>
 	      				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
 	 		    		<div id="nav-content">
-	 		    			<p><a href="#works-contaner">Works</a></p>
-	 		    			<p><a href="#skill-contaner">Skill</a></p>
-	 		    			<p><a href="#profile-contaner">Profile</a></p>
+	 		    			<p><a href="#works-container">Works</a></p>
+	 		    			<p><a href="#skill-container">Skill</a></p>
+	 		    			<p><a href="#profile-container">Profile</a></p>
 	 		    		</div>
 	  				</div>
 				</nav>	
@@ -29,11 +31,32 @@
 		</header>
 		<main>
 			<div id="main">
-				<div class="top-contaner">
-					<p><img class="top-img" src="img/mikiya-top-img.png"></p>
-					<h1>PORFOLIO<br>KAMBARA MIKIYA</h1>
+				<div class="top-container">
+					<div class="self-introduction">
+						<h1 class="main-title">PORTFOLIO <span class="title-year">2020</span></h1>
+						<p class="sub-title">Kambara Mikiya</p>
+						<p class="birthday-detail">1998-07-22</p>
+					</div>
+					<div class="container01">
+					  <div class="box">
+					    <div class="spin-container">
+					      <div class="shape">
+					        <div class="bd"></div>
+					      </div>
+					     </div>
+					  </div>
+					</div>
+					<div class="container02">
+					  <div class="box">
+					    <div class="spin-container">
+					      <div class="shape">
+					        <div class="bd"></div>
+					      </div>
+					     </div>
+					  </div>
+					</div>
 				</div>
-				<div id="works-contaner">
+				<div id="works-container">
 					<h2>Works</h2>
 					<ul>
 						<li>
@@ -62,73 +85,73 @@
 						</li>
 					</ul>
 				</div>
-				<div id="skill-contaner" ontouchstart="">
+				<div id="skill-container" ontouchstart="">
 					<h2>Skill</h2>
 					<ul>
 						<li>
 							<h3>HTML5</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○○○●</div>
 							</div>
 						</li>
 						<li>
 							<h3>CSS3</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○○○●</div>
 							</div>
 						</li>
 						<li>
 							<h3>Javascript</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○●●●</div>
 							</div>
 						<li>
 							<h3>PHP</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○○●●</div>
 							</div>
 						</li>
 						<li>
 							<h3>MySQL</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○●●●</div>
 							</div>
 						</li>
 						<li>
 							<h3>Python</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○●●●</div>
 							</div>							
 						</li>
 						<li>
 							<h3>C言語</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○○●●</div>
 							</div>
 						</li>
 						<li>
 							<h3>Illustrator</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○●●●</div>
 							</div>
 						</li>
 						<li>
 							<h3>Photoshop</h3>
-							<div class="mask-contaner">
+							<div class="mask-container">
 								<div class="mask-inner">○○○●●</div>
 							</div>
 						</li>
 					</ul>
 				</div>
 			</div>
-				<div id="profile-contaner">
+				<div id="profile-container">
 					<h2>Plofile</h2>
-					<div class="contaner-left">
-						<p><img class="profile-img" src="img/profile.png" alt="プロフィール写真"></p>
+					<div class="container-left">
+						<p><img class="profile-img" src="img/profile.gif" alt="プロフィール写真"></p>
 					</div>
-					<div class="contaner-right">
+					<div class="container-right">
 						<h3 class="name">神原 未希哉<span class="name-eng">Kambara Mikiya</span></h3>
-						<p>日本大学 生産工学部 数理情報工学科 メディアデザインコース 大学3回生。<br>コーディングではHTML&CSS&Javascript&JQueryを触れることが多いいです。<br>他の言語はPHP&Pythonを扱うことができます。</p>
+						<p>日本大学 生産工学部 数理情報工学科 <span class="br">メディアデザインコース 大学3回生。<br></span>コーディングではHTML&CSS&Javascript&JQueryを<span class="br">触れることが多いいです。<br></span>他の言語はPHP&Pythonを扱うことができます。</p>
 					</div>
 				</div>
 		</main>
