--- a/detail/LONY&JOW/index.html
+++ b/detail/LONY&JOW/index.html
@@ -17,9 +17,9 @@
       				<label id="nav-open" for="nav-input"><span></span></label>
       				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
  		    		<div id="nav-content">
- 		    			<p><a href="../../index#works-contaner">Works</a></p>
- 		    			<p><a href="../../index#skill-contaner">Skill</a></p>
- 		    			<p><a href="../../index#profile-contaner">Profile</a></p>
+ 		    			<p><a href="../../index.html#works-container">Works</a></p>
+ 		    			<p><a href="../../index.html#skill-container">Skill</a></p>
+ 		    			<p><a href="../../index.html#profile-container">Profile</a></p>
  		    		</div>
   				</div>
 			</nav>	
