--- a/detail/Cafe_shida/index.html
+++ b/detail/Cafe_shida/index.html
@@ -33,7 +33,7 @@
 					<img src="../img/cafe_shida.png" class="full_img" alt="">
 					<ul>
 						<li>
-							<h2>LONY&JOW</h2>
+							<h2>Cafe SHIDA</h2>
 							<p>Photoshop/Illustrator</p>
 							<p class="page-detail">街中にひっそりとある落ち着いた雰囲気のカフェ。<br> そこは時間がゆっくりと流れるているように感じる空間をイメージしました。<br>
 							ターゲットはそこの街に住んでいて、ちょっと仕事の合間に一休みしたい人です。</p>
