--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					</div>
 					<div class="container-right">
 						<h3 class="name">神原 未希哉<span class="name-eng">Kambara Mikiya</span></h3>
-						<p>日本大学 生産工学部 数理情報工学科 <span class="br">メディアデザインコース 大学3回生。<br></span>コーディングではHTML&CSS&Javascript&JQuery<span class="br">を触れることが多いいです。<br></span>他の言語はPHP&Pythonを扱うことができます。</p>
+						<p>日本大学 生産工学部 数理情報工学科 <span class="br">メディアデザインコース 大学3回生。<br></span>コーディングではHTML&CSS&Javascript&JQuery<span class="br">を触れることが多いです。<br></span>他の言語はPHP&Pythonを扱うことができます。</p>
 					</div>
 				</div>
 		</main>
