--- a/detail/AUTOSYSTEM/index.html
+++ b/detail/AUTOSYSTEM/index.html
@@ -31,14 +31,13 @@
 				<div class="scrol_inner">
 					<h1>Works</h1>
 					<p><img src="../img/desktop_AUTOSYSTEMpng.png" class="desktop"></p>
-					<ul>
-						<li>
-							<h2>AUTOSYSTEM</h2>
-							<p>HTML5/CSS3/PHP/Python</p>
-							<p class="page-detail">興味のあるキーワードを入力すると<br>Twitterでそのキーワードに関してつぶやいているユーザーに対して<br>自動的にいいね・リツイート・フォローを行うwebアプリケーション</p>
-						</li>
-					</ul>
-
+					<h2>AUTOSYSTEM</h2>
+					<dl>
+						<dd>HTML5/CSS3/PHP/Python</dd>
+						<dt><制作テーマ></dt><dd>Webアプリケーション</dd>
+						<dt><制作期間></dt><dd>2カ月</dd>
+						<dt><システム></dt><dd>興味のあるキーワードを入力するとTwitterで<span class="css-br">そのキーワードに関して<br></span>つぶやいているユーザーに対して自動的に<span class="css-br">いいね・リツイート・フォローを</span><span class="css-br">行うwebアプリケーション</span></dd>
+					</dl>
 				</div>
 			</div>
 		</div>
