--- a/detail/Cafe_shida/index.html
+++ b/detail/Cafe_shida/index.html
@@ -31,15 +31,14 @@
 				<div class="scrol_inner">
 					<h1>Works</h1>
 					<img src="../img/cafe_shida.png" class="full_img" alt="">
-					<ul>
-						<li>
-							<h2>Cafe SHIDA</h2>
-							<p>Photoshop/Illustrator</p>
-							<p class="page-detail">街中にひっそりとある落ち着いた雰囲気のカフェ。<br> そこは時間がゆっくりと流れるているように感じる空間をイメージしました。<br>
-							ターゲットはそこの街に住んでいて、ちょっと仕事の合間に一休みしたい人です。</p>
-						</li>
-					</ul>
-
+					<h2>Cafe SHIDA</h2>
+					<dl>
+						<dd>Photoshop/Illustrator</dd>
+						<dt><制作テーマ></dt><dd>架空カフェ</dd>
+						<dt><制作期間></dt><dd>1週間</dd>
+						<dt><コンセプト></dt><dd>街中にひっそりとある落ち着いた<span class="css-br">雰囲気のカフェ。<br></span>そこは時間がゆっくりと流れるているように感じる空間をイメージしました。<br>
+						ターゲットはそこの街に住んでいて、ちょっと仕事の合間に一休みしたい人です。</dd>
+					</dl>
 				</div>
 			</div>
 		</div>
