--- a/detail/JAMAIS-FINI/index.html
+++ b/detail/JAMAIS-FINI/index.html
@@ -32,15 +32,18 @@
 					<h1>Works</h1>
 					<p><img src="../img/desktop_JAMAIS_FINI.png" class="desktop"></p>
 					<img src="../img/JAMAIS_FINI-page.jpg" class="full_img" alt="">
-					<ul>
-						<li>
-							<h2>JAMAIS FINI</h2>
-							<p>HTML5/CSS3/Java Script/Photoshop/Illustrator</p>
-							<p class="page-detail"><span class="css-br">24時間365日営業しているレストラン。</span>ここに来て仕事をするのもよし、<br><span class="css-br">自身の時間を楽しむのもよし</span>時間を気にせずゆっくりできるそんなレストラン。</p>
-							<p><a href="../../JAMAIS_FINI_LE_TEMPS/index.html">UPL : https://mikiya4080.github.io/portfolio/detail/JAMAIS_FINI/index.html</a></p>
-						</li>
-					</ul>
-
+					<h2>JAMAIS FINI</h2>
+					<dl>
+						<dd>HTML5/CSS3/Java Script/Photoshop/Illustrator</dd>
+						<dt><制作テーマ></dt><dd>架空レストラン</dd>
+						<dt><制作期間></dt><dd>2週間</dd>
+						<dt><コンセプト></dt><dd>24時間365日営業しているレストラン。<span class="css-br">ここに来て仕事をするのもよし、<br></span>自身の時間を楽しむのもよし<span class="css-br">間を気にせずゆっくりできるそんなレストラン。</span></dd>
+						<dt><コーディング></dt><dd>レスポンシブデザインを作成する際に、<br>
+						スライドの画像をレスポンシブ専用の画像に置き換えるのに苦戦しました。<br>
+						解決法としてはJqueryで動的に差し替えすることで解決できました。<br>
+						今回の作成でスライドのレスポンシブ画像差し替えができるようになりました。</dd>
+						<p><a href="../../JAMAIS_FINI_LE_TEMPS/index.html">UPL : https://mikiya4080.github.io/portfolio/detail/JAMAIS_FINI/index.html</a></p>
+					</dl>
 				</div>
 			</div>
 		</div>
