--- a/detail/LONY&JOW/index.html
+++ b/detail/LONY&JOW/index.html
@@ -32,16 +32,16 @@
 					<h1>Works</h1>
 					<p><img src="../img/desktop_LONY&JOW.png" class="desktop"></p>
 					<img src="../img/LONY&JOW-page.jpg" class="full_img" alt="">
-					<ul>
-						<li>
-							<h2>LONY&JOW</h2>
-							<p>HTML5/CSS3/Java Script/Photoshop/Illustrator</p>
-							<p class="page-detail"><span class="css-br">なんども訪れたくなる落ち着きのある</span>レストランをコンセプトとしました。<br>ターゲットは若い人もそうですが大人の人をメインとし<br>
-							それに合わせたサイトを制作しました。</p>
-							<p><a href="../../LONY&JOW/index.html">UPL : https://mikiya4080.github.io/portfolio/detail/LONY&JOW/index.html</a></p>
-						</li>
-					</ul>
-
+					<h2>LONY&JOW</h2>
+					<dl>
+						<dd>HTML5/CSS3/Java Script/Photoshop/Illustrator</dd>
+						<dt><制作テーマ></dt><dd>架空レストラン</dd>
+						<dt><制作期間></dt><dd>3週間</dd>
+						<dt><コンセプト></dt><dd><span class="css-br">なんども訪れたくなる落ち着きのある</span>レストランをコンセプトとしました。<br>ターゲットは若い人もそうですが大人の人をメインとし<br>
+						それに合わせたサイトを制作しました。</dd>
+						<dt><コーディング></dt><dd>コーディングで落ち着いた<span class="css-br">雰囲気を出すために<br></span>それぞれのトピックをtransformを使い<br>横からゆっくりスライドして表れるようにしました。</dd>
+						<p><a href="../../LONY&JOW/index.html">UPL : https://mikiya4080.github.io/portfolio/detail/LONY&JOW/index.html</a></p>
+					</dl>
 				</div>
 			</div>
 		</div>
