--- a/LONY&JOW/index.html
+++ b/LONY&JOW/index.html
@@ -71,7 +71,7 @@
 						<h2>Access</h2>
 						<p>都内にある広々とした空間。</p>
 						<p>そこは笑顔があふれる場所</p>
-						<p>また来たいと思えるようなレストランが<br>そこにはあるります。</p>
+						<p>また来たいと思えるようなレストランが<br>そこにはあります。</p>
 						<a href="" class="read-button">read more</a>
 					</div>
 					<div class="Accessanime">
