--- a/detail/JAMAIS-FINI/index.html
+++ b/detail/JAMAIS-FINI/index.html
@@ -32,7 +32,7 @@
 					<h1>Works</h1>
 					<p><img src="../img/desktop_JAMAIS_FINI.png" class="desktop"></p>
 					<img src="../img/JAMAIS_FINI-page.jpg" class="full_img" alt="">
-					<h2>JAMAIS FINI</h2>
+					<h2>JAMAIS FINI LE TE MPLE</h2>
 					<dl>
 						<dd>HTML5/CSS3/Java Script/Photoshop/Illustrator</dd>
 						<dt><制作テーマ></dt><dd>架空レストラン</dd>
