--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link href = "https://fonts.googleapis.com/css?family= Spartan＆display = swap" rel = "stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
 
 <body>
@@ -63,7 +64,7 @@
 							<p>
 								<a href="detail/JAMAIS-FINI/index.html"><img src="img/JAMAIS_FINI_LE_TEMPS.jpg" alt="作品集1　架空カフェ"></a>
 							</p>
-							<h3>JAMAIS FINI LR TEMPLE (架空サイト)</h3>	
+							<h3>JAMAIS FINI LE TEMPLE (架空サイト)</h3>	
 						</li>
 						<li>
 							<p>
@@ -161,6 +162,5 @@
 			</div>
 		</footer>			
 	</div>
-	
 </body>
 </html>
