--- a/detail/Cafe_shida/index.html
+++ b/detail/Cafe_shida/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/main.css" />
 	<link rel="stylesheet" type="text/css" href="../css/reset.css" />
 	<link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
+	<link href = "https://fonts.googleapis.com/css?family= Spartan＆display = swap" rel = "stylesheet">
 </head>
 <body>
 	<header>
