--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<p class="sub-title">Kambara Mikiya</p>
 						<p class="birthday-detail">1998-07-22</p>
 					</div>
-					<div class="container01">
+					<div class="container-top">
 					  <div class="box">
 					    <div class="spin-container">
 					      <div class="shape">
@@ -46,7 +46,7 @@
 					     </div>
 					  </div>
 					</div>
-					<div class="container02">
+					<div class="container-back">
 					  <div class="box">
 					    <div class="spin-container">
 					      <div class="shape">
