--- a/index.html
+++ b/index.html
@@ -155,10 +155,8 @@
 					</div>
 				</div>
 		</main>
-		<footer>
-			<div id="footer">
-				<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
-			</div>
+		<footer id="footer">
+			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
 		</footer>			
 	</div>
 </body>
