--- a/JAMAIS_FINI_LE_TEMPS/index.html
+++ b/JAMAIS_FINI_LE_TEMPS/index.html
@@ -106,10 +106,8 @@
 				</aside>
 			</div>
 		</main>
-		<footer>
-			<div id="footer">
-				<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
-			</div>
+		<footer id="footer">
+			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
 		</footer>
 
 		<script type="text/javascript">
