--- a/LONY&JOW/index.html
+++ b/LONY&JOW/index.html
@@ -44,7 +44,7 @@
 							そんなくつろげるひとときをご提供いたします。</p>
 							<p>その季節に応じた旬の食べ物を使って<br>「四季を感じられるレストラン」を我々は目指しています。</p>
 							<p>初めての方でもそうでない方でもきっと満足できる<br>「笑顔のあふれる」空間を。</p>
-							<a href="" class="read-button">read more</a>
+							<a href="" class="more-button">more</a>
 						</div>
 					</div>	
 					<div class="anime">
@@ -64,7 +64,7 @@
 							<img src="img/menu02-img.png" class="sp" alt="">
 						</div>
 					</div>
-					<a href="#" class="read-button">read more</a>
+					<a href="#" class="more-button">more</a>
 				</div>
 				<div id="Access-container">
 					<div class="Access-container-inner">
@@ -72,7 +72,7 @@
 						<p>都内にある広々とした空間。</p>
 						<p>そこは笑顔があふれる場所</p>
 						<p>また来たいと思えるようなレストランが<br>そこにはあります。</p>
-						<a href="" class="read-button">read more</a>
+						<a href="" class="more-button">more</a>
 					</div>
 					<div class="Accessanime">
 						<img src="img/background.png" class="pc" alt="">
