--- a/detail/AUTOSYSTEM/index.html
+++ b/detail/AUTOSYSTEM/index.html
@@ -42,10 +42,8 @@
 				</div>
 			</div>
 		</div>
-		<footer>
-			<div id="footer">
-				<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
-			</div>
+		<footer id="footer">
+			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
 		</footer>		
 	</main>
 </body>
