--- a/detail/Cafe_shida/index.html
+++ b/detail/Cafe_shida/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/main.css" />
 	<link rel="stylesheet" type="text/css" href="../css/reset.css" />
 	<link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
-	<link href = "https://fonts.googleapis.com/css?family= Spartan＆display = swap" rel = "stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:200&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -43,10 +43,8 @@
 				</div>
 			</div>
 		</div>
-		<footer>
-			<div id="footer">
-				<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
-			</div>
+		<footer id="footer">
+			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
 		</footer>		
 	</main>
 </body>
