--- a/detail/LONY&JOW/index.html
+++ b/detail/LONY&JOW/index.html
@@ -46,12 +46,9 @@
 				</div>
 			</div>
 		</div>
-		<footer>
-			<div id="footer">
-				<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
-			</div>
+		<footer id="footer">
+			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
 		</footer>		
 	</main>
 </body>
-
 </html>
