--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
 							<p>
 								<a href="detail/JAMAIS-FINI/index.html"><img src="img/JAMAIS_FINI_LE_TEMPS.jpg" alt="作品集1　架空カフェ"></a>
 							</p>
-							<h3>JAMAIS FINI LE TEMPLE (架空サイト)</h3>	
+							<div class="detail-title">JAMAIS FINI LE TEMPLE (架空サイト)</div>	
 						</li>
 						<li>
 							<p>
 								<a href="detail/LONY&JOW/index.html"><img src="img/LONY&JOW.jpg"  alt="作品集2　架空レストラン"></a>
 							</p>
-							<h3>LONY&JOW (架空サイト)</h3>
+							<div class="detail-title">LONY&JOW (架空サイト)</div>
 						</li>
 						<li>
 							<p>
 								<a href="detail/Cafe_shida/index.html"><img src="img/CAFE_SHIDA.png"  alt="作品集3　架空カフェ"></a>
 							</p>
-							<h3>CAFE SHIDA (架空サイトデザイン)</h3>
+							<div class="detail-title">CAFE SHIDA (架空サイトデザイン)</div>
 						</li>
 						<li>
 							<p>
 								<a href="detail/AUTOSYSTEM/index.html"><img src="img/twitter-apps.png"  alt="作品集4 webアプリケーション"></a>
 							</p>
-							<h3>AOUSYSTEM (WEBアプリケーション)</h3>
+							<div class="detail-title">AOUSYSTEM (WEBアプリケーション)</div>
 						</li>
 					</ul>
 				</div>
@@ -89,54 +89,54 @@
 					<h2>Skill</h2>
 					<ul>
 						<li>
-							<h3>HTML5</h3>
+							<div class="skill-title">HTML5</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○○○●</div>
 							</div>
 						</li>
 						<li>
-							<h3>CSS3</h3>
+							<div class="skill-title">CSS3</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○○○●</div>
 							</div>
 						</li>
 						<li>
-							<h3>Javascript</h3>
+							<div class="skill-title">Javascript</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○●●●</div>
 							</div>
 						<li>
-							<h3>PHP</h3>
+							<div class="skill-title">PHP</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○○●●</div>
 							</div>
 						</li>
 						<li>
-							<h3>MySQL</h3>
+							<div class="skill-title">MySQL</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○●●●</div>
 							</div>
 						</li>
 						<li>
-							<h3>Python</h3>
+							<div class="skill-title">Python</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○●●●</div>
 							</div>							
 						</li>
 						<li>
-							<h3>C言語</h3>
+							<div class="skill-title">C言語</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○○●●</div>
 							</div>
 						</li>
 						<li>
-							<h3>Illustrator</h3>
+							<div class="skill-title">Illustrator</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○●●●</div>
 							</div>
 						</li>
 						<li>
-							<h3>Photoshop</h3>
+							<div class="skill-title">Photoshop</div>
 							<div class="mask-container">
 								<div class="mask-inner">○○○●●</div>
 							</div>
