--- a/detail/AUTOSYSTEM/index.html
+++ b/detail/AUTOSYSTEM/index.html
@@ -6,8 +6,7 @@
 	<title>cafe studio詳細ページ</title>
 	<link rel="stylesheet" type="text/css" href="../css/main.css" />
 	<link rel="stylesheet" type="text/css" href="../css/reset.css" />
-	<link href="https://fonts.googleapis.com/css?family=Lato:100&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:200&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header>
