--- a/index.html
+++ b/index.html
@@ -12,147 +12,143 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
 <body>
 	<div id="wrap">
-		<header>
-			<div id="header">
-				<nav>
-					<div id="nav-drawer">
-	   					<input id="nav-input" type="checkbox" class="nav-unshown">
-	      				<label id="nav-open" for="nav-input"><span></span></label>
-	      				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
-	 		    		<div id="nav-content">
-	 		    			<p><a href="#works-container">Works</a></p>
-	 		    			<p><a href="#skill-container">Skill</a></p>
-	 		    			<p><a href="#profile-container">Profile</a></p>
-	 		    		</div>
-	  				</div>
-				</nav>	
-			</div>
+		<header id="header">
+			<nav>
+				<div id="nav-drawer">
+   					<input id="nav-input" type="checkbox" class="nav-unshown">
+      				<label id="nav-open" for="nav-input"><span></span></label>
+      				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
+ 		    		<div id="nav-content">
+ 		    			<p><a href="#works-container">Works</a></p>
+ 		    			<p><a href="#skill-container">Skill</a></p>
+ 		    			<p><a href="#profile-container">Profile</a></p>
+ 		    		</div>
+  				</div>
+			</nav>	
 		</header>
-		<main>
-			<div id="main">
-				<div class="top-container">
-					<div class="self-introduction">
-						<h1 class="main-title">PORTFOLIO <span class="title-year">2020</span></h1>
-						<p class="sub-title">Kambara Mikiya</p>
-						<p class="birthday-detail">1998-07-22</p>
-					</div>
-					<div class="container-top">
-					  <div class="box">
-					    <div class="spin-container">
-					      <div class="shape">
-					        <div class="bd"></div>
-					      </div>
-					     </div>
-					  </div>
-					</div>
-					<div class="container-back">
-					  <div class="box">
-					    <div class="spin-container">
-					      <div class="shape">
-					        <div class="bd"></div>
-					      </div>
-					     </div>
-					  </div>
-					</div>
+		<main id="main">
+			<div class="top-container">
+				<div class="self-introduction">
+					<h1 class="main-title">PORTFOLIO <span class="title-year">2020</span></h1>
+					<p class="sub-title">Kambara Mikiya</p>
+					<p class="birthday-detail">1998-07-22</p>
 				</div>
-				<div id="works-container">
-					<h2>Works</h2>
-					<ul>
-						<li>
-							<p>
-								<a href="detail/JAMAIS-FINI/index.html"><img src="img/JAMAIS_FINI_LE_TEMPS.jpg" alt="作品集1　架空カフェ"></a>
-							</p>
-							<div class="detail-title">JAMAIS FINI LE TEMPLE (架空サイト)</div>	
-						</li>
-						<li>
-							<p>
-								<a href="detail/LONY&JOW/index.html"><img src="img/LONY&JOW.jpg"  alt="作品集2　架空レストラン"></a>
-							</p>
-							<div class="detail-title">LONY&JOW (架空サイト)</div>
-						</li>
-						<li>
-							<p>
-								<a href="detail/Cafe_shida/index.html"><img src="img/CAFE_SHIDA.png"  alt="作品集3　架空カフェ"></a>
-							</p>
-							<div class="detail-title">CAFE SHIDA (架空サイトデザイン)</div>
-						</li>
-						<li>
-							<p>
-								<a href="detail/AUTOSYSTEM/index.html"><img src="img/twitter-apps.png"  alt="作品集4 webアプリケーション"></a>
-							</p>
-							<div class="detail-title">AOUSYSTEM (WEBアプリケーション)</div>
-						</li>
-					</ul>
+				<div class="container-top">
+				  <div class="box">
+				    <div class="spin-container">
+				      <div class="shape">
+				        <div class="bd"></div>
+				      </div>
+				     </div>
+				  </div>
 				</div>
-				<div id="skill-container" ontouchstart="">
-					<h2>Skill</h2>
-					<ul>
-						<li>
-							<div class="skill-title">HTML5</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○○○●</div>
-							</div>
-						</li>
-						<li>
-							<div class="skill-title">CSS3</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○○○●</div>
-							</div>
-						</li>
-						<li>
-							<div class="skill-title">Javascript</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○●●●</div>
-							</div>
-						<li>
-							<div class="skill-title">PHP</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○○●●</div>
-							</div>
-						</li>
-						<li>
-							<div class="skill-title">MySQL</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○●●●</div>
-							</div>
-						</li>
-						<li>
-							<div class="skill-title">Python</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○●●●</div>
-							</div>							
-						</li>
-						<li>
-							<div class="skill-title">C言語</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○○●●</div>
-							</div>
-						</li>
-						<li>
-							<div class="skill-title">Illustrator</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○●●●</div>
-							</div>
-						</li>
-						<li>
-							<div class="skill-title">Photoshop</div>
-							<div class="mask-container">
-								<div class="mask-inner">○○○●●</div>
-							</div>
-						</li>
-					</ul>
+				<div class="container-back">
+				  <div class="box">
+				    <div class="spin-container">
+				      <div class="shape">
+				        <div class="bd"></div>
+				      </div>
+				     </div>
+				  </div>
 				</div>
 			</div>
-				<div id="profile-container">
-					<h2>Plofile</h2>
-					<div class="container-left">
-						<p><img class="profile-img" src="img/profile.gif" alt="プロフィール写真"></p>
-					</div>
-					<div class="container-right">
-						<h3 class="name">神原 未希哉<span class="name-eng">Kambara Mikiya</span></h3>
-						<p>日本大学 生産工学部 数理情報工学科 <span class="br">メディアデザインコース 大学3回生。<br></span>コーディングではHTML&CSS&Javascript&JQuery<span class="br">を触れることが多いです。<br></span>他の言語はPHP&Pythonを扱うことができます。</p>
-					</div>
+			<div id="works-container">
+				<h2>Works</h2>
+				<ul>
+					<li>
+						<p>
+							<a href="detail/JAMAIS-FINI/index.html"><img src="img/JAMAIS_FINI_LE_TEMPS.jpg" alt="作品集1　架空カフェ"></a>
+						</p>
+						<div class="detail-title">JAMAIS FINI LE TEMPLE (架空サイト)</div>	
+					</li>
+					<li>
+						<p>
+							<a href="detail/LONY&JOW/index.html"><img src="img/LONY&JOW.jpg"  alt="作品集2　架空レストラン"></a>
+						</p>
+						<div class="detail-title">LONY&JOW (架空サイト)</div>
+					</li>
+					<li>
+						<p>
+							<a href="detail/Cafe_shida/index.html"><img src="img/CAFE_SHIDA.png"  alt="作品集3　架空カフェ"></a>
+						</p>
+						<div class="detail-title">CAFE SHIDA (架空サイトデザイン)</div>
+					</li>
+					<li>
+						<p>
+							<a href="detail/AUTOSYSTEM/index.html"><img src="img/twitter-apps.png"  alt="作品集4 webアプリケーション"></a>
+						</p>
+						<div class="detail-title">AOUSYSTEM (WEBアプリケーション)</div>
+					</li>
+				</ul>
+			</div>
+			<div id="skill-container" ontouchstart="">
+				<h2>Skill</h2>
+				<ul>
+					<li>
+						<div class="skill-title">HTML5</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○○●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">CSS3</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○○●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">Javascript</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○●●●</div>
+						</div>
+					<li>
+						<div class="skill-title">PHP</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○●●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">MySQL</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○●●●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">Python</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○●●●</div>
+						</div>							
+					</li>
+					<li>
+						<div class="skill-title">C言語</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○●●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">Illustrator</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○●●●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">Photoshop</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○●●</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div id="profile-container">
+				<h2>Plofile</h2>
+				<div class="container-left">
+					<p><img class="profile-img" src="img/profile.gif" alt="プロフィール写真"></p>
 				</div>
+				<div class="container-right">
+					<h3 class="name">神原 未希哉<span class="name-eng">Kambara Mikiya</span></h3>
+					<p>日本大学 生産工学部 数理情報工学科 <span class="br">メディアデザインコース 大学3回生。<br></span>コーディングではHTML&CSS&Javascript&JQuery<span class="br">を触れることが多いです。<br></span>他の言語はPHP&Pythonを扱うことができます。</p>
+				</div>
+			</div>
 		</main>
 		<footer id="footer">
 			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
