--- a/JAMAIS_FINI_LE_TEMPS/index.html
+++ b/JAMAIS_FINI_LE_TEMPS/index.html
@@ -41,70 +41,66 @@
 				<img src="img/main-title.gif" class="main-title" alt="メインタイトル画像">
 			</div>
 		</article>
-		<header>
-			<div id="header">
-				<div class="global_header_logo">
-					<img src="img/logo-img.gif" alt="ロゴマーク">
-					<h1>JAMAIS FINI <br>LE TEMPS</h1>
-				</div>	
-				<div class="global_header_contact">
-					<a href="contact/contact.html">
-						<h2>問い合わせ</h2>
-					</a>
-				</div>			
-			</div>							
+		<header id="header">
+			<div class="global_header_logo">
+				<img src="img/logo-img.gif" alt="ロゴマーク">
+				<h1>JAMAIS FINI <br>LE TEMPS</h1>
+			</div>	
+			<div class="global_header_contact">
+				<a href="contact/contact.html">
+					<h2>問い合わせ</h2>
+				</a>
+			</div>										
 		</header>
-		<main>
-			<div id="main">
-				<section>
-					<div id="intro">
-						<div class="intro-inner">
-							<img src="img/menu-img_off.png" class="intro-img-left" alt="メニュー画像">
+		<main id="main">
+			<section>
+				<div id="intro">
+					<div class="intro-inner">
+						<img src="img/menu-img_off.png" class="intro-img-left" alt="メニュー画像">
+					</div>
+					<div  class="intro-inner">
+						<img src="img/access-img_off.png" class="intro-img-right" alt="アクセス画像">
+					</div>
+				</div>
+			</section>
+			<aside>
+				<div id="about-restaurant">
+					<img src="img/pc_concept-img.png" class="about-restaurant-left" alt="コンセプト画像">
+					<div class="about-restaurant-right">
+						<div class="wi-fi-info">
+							<img src="img/Wi-Fi.png" alt="wi-fi画像">
+							<h2>フリーWi-Fiが備わっています。<br>どうぞご自由にご利用ください。</h2>
 						</div>
-						<div  class="intro-inner">
-							<img src="img/access-img_off.png" class="intro-img-right" alt="アクセス画像">
+						<div class="sns-info">
+							<h3>FOLLOW US</h3>
+							<div class="sns-inner">
+								<a href="#">
+									<img src="img/insta.gif" alt="Instgramロゴ">
+									<p>Instgram</p>
+								</a>
+							</div>
+							<div class="sns-inner">
+								<a href="#">
+									<img src="img/twitter.gif" alt="Twitterロゴ">
+									<p>Twitter</p>
+								</a>
+							</div>
+							<div class="sns-inner">
+								<a href="#">
+									<img src="img/faceboock.gif" alt="Faceboockロゴ">
+									<p>Facebook</p>
+								</a>
+							</div>
+							<div class="sns-inner">
+								<a href="#">
+									<img src="img/line.gif" alt="Lineロゴ">
+									<p>Line</p>
+								</a>
+							</div>		
 						</div>
 					</div>
-				</section>
-				<aside>
-					<div id="about-restaurant">
-						<img src="img/pc_concept-img.png" class="about-restaurant-left" alt="コンセプト画像">
-						<div class="about-restaurant-right">
-							<div class="wi-fi-info">
-								<img src="img/Wi-Fi.png" alt="wi-fi画像">
-								<h2>フリーWi-Fiが備わっています。<br>どうぞご自由にご利用ください。</h2>
-							</div>
-							<div class="sns-info">
-								<h3>FOLLOW US</h3>
-								<div class="sns-inner">
-									<a href="#">
-										<img src="img/insta.gif" alt="Instgramロゴ">
-										<p>Instgram</p>
-									</a>
-								</div>
-								<div class="sns-inner">
-									<a href="#">
-										<img src="img/twitter.gif" alt="Twitterロゴ">
-										<p>Twitter</p>
-									</a>
-								</div>
-								<div class="sns-inner">
-									<a href="#">
-										<img src="img/faceboock.gif" alt="Faceboockロゴ">
-										<p>Facebook</p>
-									</a>
-								</div>
-								<div class="sns-inner">
-									<a href="#">
-										<img src="img/line.gif" alt="Lineロゴ">
-										<p>Line</p>
-									</a>
-								</div>		
-							</div>
-						</div>
-					</div>
-				</aside>
-			</div>
+				</div>
+			</aside>
 		</main>
 		<footer id="footer">
 			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
