--- a/LONY&JOW/index.html
+++ b/LONY&JOW/index.html
@@ -16,69 +16,66 @@
 </head>
 <body>
 	<div id="wrap">
-		<main>	
-			<div id="main">
-				<div class="topBlock list">
-					<a href="#" class="rogo">
-						<img src="img/ikon.png" class="main-ikon" alt="アイコン画像">
-						<span class="main-title">LONY&JOW<br> RESTSURSNT</span> 
-					</a>
-					<h1 class="title01">WELCOME TO L<span class="title-Span">ONY&JOW</span></h1>
-					<h1 class="title02">UNIQUE AND D<span class="title-Span">ERCIOUS FOOD</span></h1>
-					<img src="img/restaurant.jpg" class="pc right_img" alt="">
-					<img src="img/restaurant-copy.jpg" class="sp" alt="">
-					<h2>また来たくなるレストラン、<span class="css-br">そんな場所でありたい</span><br>
-					料理で「笑顔」を作る、<span class="css-br">そんな時間をご提供いたします</span></h2>
-				</div>
-
-				<div class="hamburger">
-					<dl>
-						<dd><span class="hamburger-icon"></span></dd>
-					</dl>
-				</div>
-				<div id="Concept-container">	
-					<div class="detailBlock">
-						<div class="detail-inner">
-							<h2>Consept</h2>
-							<p>おいしいと感じてもらえる料理とともに心身を開放する。<br>
-							そんなくつろげるひとときをご提供いたします。</p>
-							<p>その季節に応じた旬の食べ物を使って<br>「四季を感じられるレストラン」を我々は目指しています。</p>
-							<p>初めての方でもそうでない方でもきっと満足できる<br>「笑顔のあふれる」空間を。</p>
-							<a href="" class="more-button">more</a>
-						</div>
-					</div>	
-					<div class="anime">
-						<img src="img/background.png" class="pc" alt="">
-						<img src="img/restaurant2.jpg" class="Concept-img" alt="">
-					</div>	
-				</div>
-				<div id="Menu-container">
-					<h2>Menu</h2>
-					<p>生命力に満ちた旬の野菜を使って<br>「美味しくて体にやさしい」を追求<br>皆様に数々の季節限定料理を。</p>
-					<div class="Menu-container-inner">
-						<div class="anime-left pc">
-							<img src="img/menue06-img.png" alt="">
-						</div>
-						<div class="anime-right">
-							<img src="img/menue05-img.png" class="pc" alt="">
-							<img src="img/menu02-img.png" class="sp" alt="">
-						</div>
-					</div>
-					<a href="#" class="more-button">more</a>
-				</div>
-				<div id="Access-container">
-					<div class="Access-container-inner">
-						<h2>Access</h2>
-						<p>都内にある広々とした空間。</p>
-						<p>そこは笑顔があふれる場所</p>
-						<p>また来たいと思えるようなレストランが<br>そこにはあります。</p>
+		<main id="main">	
+			<div class="topBlock list">
+				<a href="#" class="rogo">
+					<img src="img/ikon.png" class="main-ikon" alt="アイコン画像">
+					<span class="main-title">LONY&JOW<br> RESTSURSNT</span> 
+				</a>
+				<h1 class="title01">WELCOME TO L<span class="title-Span">ONY&JOW</span></h1>
+				<h1 class="title02">UNIQUE AND D<span class="title-Span">ERCIOUS FOOD</span></h1>
+				<img src="img/restaurant.jpg" class="pc right_img" alt="">
+				<img src="img/restaurant-copy.jpg" class="sp" alt="">
+				<h2>また来たくなるレストラン、<span class="css-br">そんな場所でありたい</span><br>
+				料理で「笑顔」を作る、<span class="css-br">そんな時間をご提供いたします</span></h2>
+			</div>
+			<div class="hamburger">
+				<dl>
+					<dd><span class="hamburger-icon"></span></dd>
+				</dl>
+			</div>
+			<div id="Concept-container">	
+				<div class="detailBlock">
+					<div class="detail-inner">
+						<h2>Consept</h2>
+						<p>おいしいと感じてもらえる料理とともに心身を開放する。<br>
+						そんなくつろげるひとときをご提供いたします。</p>
+						<p>その季節に応じた旬の食べ物を使って<br>「四季を感じられるレストラン」を我々は目指しています。</p>
+						<p>初めての方でもそうでない方でもきっと満足できる<br>「笑顔のあふれる」空間を。</p>
 						<a href="" class="more-button">more</a>
 					</div>
-					<div class="Accessanime">
-						<img src="img/background.png" class="pc" alt="">
-						<img src="img/restaurant-image.jpg" class="Access-img" alt="">	
-					</div>	
+				</div>	
+				<div class="anime">
+					<img src="img/background.png" class="pc" alt="">
+					<img src="img/restaurant2.jpg" class="Concept-img" alt="">
+				</div>	
+			</div>
+			<div id="Menu-container">
+				<h2>Menu</h2>
+				<p>生命力に満ちた旬の野菜を使って<br>「美味しくて体にやさしい」を追求<br>皆様に数々の季節限定料理を。</p>
+				<div class="Menu-container-inner">
+					<div class="anime-left pc">
+						<img src="img/menue06-img.png" alt="">
+					</div>
+					<div class="anime-right">
+						<img src="img/menue05-img.png" class="pc" alt="">
+						<img src="img/menu02-img.png" class="sp" alt="">
+					</div>
 				</div>
+				<a href="#" class="more-button">more</a>
+			</div>
+			<div id="Access-container">
+				<div class="Access-container-inner">
+					<h2>Access</h2>
+					<p>都内にある広々とした空間。</p>
+					<p>そこは笑顔があふれる場所</p>
+					<p>また来たいと思えるようなレストランが<br>そこにはあります。</p>
+					<a href="" class="more-button">more</a>
+				</div>
+				<div class="Accessanime">
+					<img src="img/background.png" class="pc" alt="">
+					<img src="img/restaurant-image.jpg" class="Access-img" alt="">	
+				</div>	
 			</div>
 		</main>
 		<footer>
