--- a/LONY&JOW/index.html
+++ b/LONY&JOW/index.html
@@ -2,114 +2,158 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="Kambara Portfolio">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-	<title>LONY&JOW | 落ち着いた雰囲気のレストラン </title>
-	<link rel="stylesheet" type="text/css" href="https://unpkg.com/ress/dist/ress.min.css">
+	<title>kambara Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/black/pace-theme-center-circle.min.css" />
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery.inview.js"></script>
-	<script type="text/javascript" src="js/fluffy-img.js"></script>
-</head>
+	<link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
 <body>
 	<div id="wrap">
-		<main id="main">	
-			<div class="topBlock list">
-				<a href="#" class="rogo">
-					<img src="img/ikon.png" class="main-ikon" alt="アイコン画像">
-					<span class="main-title">LONY&JOW<br> RESTSURSNT</span> 
-				</a>
-				<h1 class="title01">WELCOME TO L<span class="title-Span">ONY&JOW</span></h1>
-				<h1 class="title02">UNIQUE AND D<span class="title-Span">ERCIOUS FOOD</span></h1>
-				<img src="img/restaurant.jpg" class="pc right_img" alt="">
-				<img src="img/restaurant-copy.jpg" class="sp" alt="">
-				<h2>また来たくなるレストラン、<span class="css-br">そんな場所でありたい</span><br>
-				料理で「笑顔」を作る、<span class="css-br">そんな時間をご提供いたします</span></h2>
-			</div>
-			<div class="hamburger">
-				<dl>
-					<dd><span class="hamburger-icon"></span></dd>
-				</dl>
-			</div>
-			<div id="Concept-container">	
-				<div class="detailBlock">
-					<div class="detail-inner">
-						<h2>Consept</h2>
-						<p>おいしいと感じてもらえる料理とともに心身を開放する。<br>
-						そんなくつろげるひとときをご提供いたします。</p>
-						<p>その季節に応じた旬の食べ物を使って<br>「四季を感じられるレストラン」を我々は目指しています。</p>
-						<p>初めての方でもそうでない方でもきっと満足できる<br>「笑顔のあふれる」空間を。</p>
-						<a href="" class="more-button">more</a>
-					</div>
-				</div>	
-				<div class="anime">
-					<img src="img/background.png" class="pc" alt="">
-					<img src="img/restaurant2.jpg" class="Concept-img" alt="">
-				</div>	
-			</div>
-			<div id="Menu-container">
-				<h2>Menu</h2>
-				<p>生命力に満ちた旬の野菜を使って<br>「美味しくて体にやさしい」を追求<br>皆様に数々の季節限定料理を。</p>
-				<div class="Menu-container-inner">
-					<div class="anime-left pc">
-						<img src="img/menue06-img.png" alt="">
-					</div>
-					<div class="anime-right">
-						<img src="img/menue05-img.png" class="pc" alt="">
-						<img src="img/menu02-img.png" class="sp" alt="">
-					</div>
+		<header id="header">
+			<nav>
+				<div id="nav-drawer">
+   					<input id="nav-input" type="checkbox" class="nav-unshown">
+      				<label id="nav-open" for="nav-input"><span></span></label>
+      				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
+ 		    		<div id="nav-content">
+ 		    			<p><a href="#works-container">Works</a></p>
+ 		    			<p><a href="#skill-container">Skill</a></p>
+ 		    			<p><a href="#profile-container">Profile</a></p>
+ 		    		</div>
+  				</div>
+			</nav>	
+		</header>
+		<main id="main">
+			<div class="top-container">
+				<div class="self-introduction">
+					<h1 class="main-title">PORTFOLIO <span class="title-year">2020</span></h1>
+					<p class="sub-title">Kambara Mikiya</p>
+					<p class="birthday-detail">1998-07-22</p>
 				</div>
-				<a href="#" class="more-button">more</a>
-			</div>
-			<div id="Access-container">
-				<div class="Access-container-inner">
-					<h2>Access</h2>
-					<p>都内にある広々とした空間。</p>
-					<p>そこは笑顔があふれる場所</p>
-					<p>また来たいと思えるようなレストランが<br>そこにはあります。</p>
-					<a href="" class="more-button">more</a>
+				<div class="container-top">
+				  <div class="box">
+				    <div class="spin-container">
+				      <div class="shape">
+				        <div class="bd"></div>
+				      </div>
+				     </div>
+				  </div>
 				</div>
-				<div class="Accessanime">
-					<img src="img/background.png" class="pc" alt="">
-					<img src="img/restaurant-image.jpg" class="Access-img" alt="">	
-				</div>	
+				<div class="container-back">
+				  <div class="box">
+				    <div class="spin-container">
+				      <div class="shape">
+				        <div class="bd"></div>
+				      </div>
+				     </div>
+				  </div>
+				</div>
+			</div>
+			<div id="works-container">
+				<h2>Works</h2>
+				<ul>
+					<li>
+						<p>
+							<a href="detail/JAMAIS-FINI/index.html"><img src="img/JAMAIS_FINI_LE_TEMPS.jpg" alt="作品集1　架空カフェ"></a>
+						</p>
+						<div class="detail-title">JAMAIS FINI LE TEMPLE (架空サイト)</div>	
+					</li>
+					<li>
+						<p>
+							<a href="detail/LONY&JOW/index.html"><img src="img/LONY&JOW.jpg"  alt="作品集2　架空レストラン"></a>
+						</p>
+						<div class="detail-title">LONY&JOW (架空サイト)</div>
+					</li>
+					<li>
+						<p>
+							<a href="detail/Cafe_shida/index.html"><img src="img/CAFE_SHIDA.png"  alt="作品集3　架空カフェ"></a>
+						</p>
+						<div class="detail-title">CAFE SHIDA (架空サイトデザイン)</div>
+					</li>
+					<li>
+						<p>
+							<a href="detail/AUTOSYSTEM/index.html"><img src="img/twitter-apps.png"  alt="作品集4 webアプリケーション"></a>
+						</p>
+						<div class="detail-title">AOUSYSTEM (WEBアプリケーション)</div>
+					</li>
+				</ul>
+			</div>
+			<div id="skill-container" ontouchstart="">
+				<h2>Skill</h2>
+				<ul>
+					<li>
+						<div class="skill-title">HTML5</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○○●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">CSS3</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○○●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">Javascript</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○●●●</div>
+						</div>
+					<li>
+						<div class="skill-title">PHP</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○●●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">MySQL</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○●●●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">Python</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○●●●</div>
+						</div>							
+					</li>
+					<li>
+						<div class="skill-title">C言語</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○●●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">Illustrator</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○●●●</div>
+						</div>
+					</li>
+					<li>
+						<div class="skill-title">Photoshop</div>
+						<div class="mask-container">
+							<div class="mask-inner">○○○●●</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div id="profile-container">
+				<h2>Plofile</h2>
+				<div class="container-left">
+					<p><img class="profile-img" src="img/profile.gif" alt="プロフィール写真"></p>
+				</div>
+				<div class="container-right">
+					<h3 class="name">神原 未希哉<span class="name-eng">Kambara Mikiya</span></h3>
+					<p>日本大学 生産工学部 数理情報工学科 <span class="br">メディアデザインコース 大学3回生。<br></span>コーディングではHTML&CSS&Javascript&JQuery<span class="br">を触れることが多いです。<br></span>他の言語はPHP&Pythonを扱うことができます。</p>
+				</div>
 			</div>
 		</main>
-		<footer>
-			<div id="footer">
-				<div class="footer-inner">
-					<div class="footer-info">
-						<div class="head">メールアドレス</div>
-						<div class="body">Lony.jowrest@scd-u.jp</div>
-						<div class="head">電話番号</div>
-						<div class="body">02-2331-2331</div>
-						<div class="head">営業時間</div>
-						<div class="body">10:00~22:00</div>
-						<div class="head">定休日</div>
-						<div class="body">水曜日 (4月~12月) 火曜日・水曜日(1月~3月)<br>季節により変更等ございますので詳細は営業日カレンダーをご確認ください。</div>
-					</div>
-					<ul class="menu pc">
-						<li><a href="#Concept-container">Concept</a></li>
-						<li><a href="#Menu-container">Menu</a></li>
-						<li><a href="#Access-container">Access</a></li>
-						<li><a href="#footer">Informaton</a></li>
-					</ul>
-					<a href="#main" class="sp top-button">Topへ</a>
-					<a href="#" class="ikon pc">
-						<img src="img/facebook-ikkon.png">
-						<img src="img/instagram-ikon.png">
-						<img src="img/twitter-ikon.jpg">
-					</a>
-				</div>
-			</div>
-		</footer>
+		<footer id="footer">
+			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
+		</footer>			
 	</div>
-	<script src="js/scrool-anime.js" ></script>
-	<script src="js/animeLeft.js" ></script>
-	<script src="js/animeRight.js" ></script>
-	<script src="js/scroll-access.js" ></script>
 </body>
 </html>
