--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="Kambara Portfolio">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 	<title>kambara Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
