--- a/detail/Cafe_shida/index.html
+++ b/detail/Cafe_shida/index.html
@@ -9,43 +9,38 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div id="header">
-			<nav>
-				<div id="nav-drawer">
-   					<input id="nav-input" type="checkbox" class="nav-unshown">
-      				<label id="nav-open" for="nav-input"><span></span></label>
-      				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
- 		    		<div id="nav-content">
- 		    			<p><a href="../../index.html#works-container">Works</a></p>
- 		    			<p><a href="../../index.html#skill-container">Skill</a></p>
- 		    			<p><a href="../../index.html#profile-container">Profile</a></p>
- 		    		</div>
-  				</div>
-			</nav>	
-		</div>
+	<header id="header">
+		<nav>
+			<div id="nav-drawer">
+				<input id="nav-input" type="checkbox" class="nav-unshown">
+  				<label id="nav-open" for="nav-input"><span></span></label>
+  				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
+		    	<div id="nav-content">
+		    		<p><a href="../../index.html#works-container">Works</a></p>
+		    		<p><a href="../../index.html#skill-container">Skill</a></p>
+		    		<p><a href="../../index.html#profile-container">Profile</a></p>
+		    	</div>
+			</div>
+		</nav>
 	</header>
-	<main>
-		<div class="main">
-			<div class="scrol">
-				<div class="scrol_inner">
-					<h1>Works</h1>
-					<img src="../img/cafe_shida.png" class="full_img" alt="">
-					<h2>Cafe SHIDA</h2>
-					<dl>
-						<dd>Photoshop/Illustrator</dd>
-						<dt><制作テーマ></dt><dd>架空カフェ</dd>
-						<dt><制作期間></dt><dd>1週間</dd>
-						<dt><コンセプト></dt><dd>街中にひっそりとある落ち着いた<span class="css-br">雰囲気のカフェ。<br></span>そこは時間がゆっくりと流れるているように感じる空間をイメージしました。<br>
-						ターゲットはそこの街に住んでいて、ちょっと仕事の合間に一休みしたい人です。</dd>
-					</dl>
-				</div>
+	<main class="main">
+		<div class="scrol">
+			<div class="scrol_inner">
+				<h1>Works</h1>
+				<img src="../img/cafe_shida.png" class="full_img" alt="">
+				<h2>Cafe SHIDA</h2>
+				<dl>
+					<dd>Photoshop/Illustrator</dd>
+					<dt><制作テーマ></dt><dd>架空カフェ</dd>
+					<dt><制作期間></dt><dd>1週間</dd>
+					<dt><コンセプト></dt><dd>街中にひっそりとある落ち着いた<span class="css-br">雰囲気のカフェ。<br></span>そこは時間がゆっくりと流れるているように感じる空間をイメージしました。<br>
+					ターゲットはそこの街に住んでいて、ちょっと仕事の合間に一休みしたい人です。</dd>
+				</dl>
 			</div>
 		</div>
-		<footer id="footer">
-			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
-		</footer>		
 	</main>
+	<footer id="footer">
+			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
+	</footer>		
 </body>
-
 </html>
