--- a/detail/JAMAIS-FINI/index.html
+++ b/detail/JAMAIS-FINI/index.html
@@ -9,48 +9,43 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div id="header">
-			<nav>
-				<div id="nav-drawer">
-   					<input id="nav-input" type="checkbox" class="nav-unshown">
-      				<label id="nav-open" for="nav-input"><span></span></label>
-      				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
- 		    		<div id="nav-content">
- 		    			<p><a href="../../index.html#works-container">Works</a></p>
- 		    			<p><a href="../../index.html#skill-container">Skill</a></p>
- 		    			<p><a href="../../index.html#profile-container">Profile</a></p>
- 		    		</div>
-  				</div>
-			</nav>	
-		</div>
+	<header id="header">
+		<nav>
+			<div id="nav-drawer">
+				<input id="nav-input" type="checkbox" class="nav-unshown">
+  				<label id="nav-open" for="nav-input"><span></span></label>
+  				<label class="nav-unshown" id="nav-close" for="nav-input"></label>
+		    	<div id="nav-content">
+		    		<p><a href="../../index.html#works-container">Works</a></p>
+		    		<p><a href="../../index.html#skill-container">Skill</a></p>
+		    		<p><a href="../../index.html#profile-container">Profile</a></p>
+		    	</div>
+			</div>
+		</nav>	
 	</header>
-	<main>
-		<div class="main">
-			<div class="scrol">
-				<div class="scrol_inner">
-					<h1>Works</h1>
-					<p><img src="../img/desktop_JAMAIS_FINI.png" class="desktop"></p>
-					<img src="../img/JAMAIS_FINI-page.jpg" class="full_img" alt="">
-					<h2>JAMAIS FINI LE TE MPLE</h2>
-					<dl>
-						<dd>HTML5/CSS3/Java Script/Photoshop/Illustrator</dd>
-						<dt><制作テーマ></dt><dd>架空レストラン</dd>
-						<dt><制作期間></dt><dd>2週間</dd>
-						<dt><コンセプト></dt><dd>24時間365日営業しているレストラン。<span class="css-br">ここに来て仕事をするのもよし、<br></span>自身の時間を楽しむのもよし<span class="css-br">間を気にせずゆっくりできるそんなレストラン。</span></dd>
-						<dt><コーディング></dt><dd>レスポンシブデザインを作成する際に、<br>
-						スライドの画像をレスポンシブ専用の画像に置き換えるのに苦戦しました。<br>
-						解決法としてはJqueryで動的に差し替えすることで解決できました。<br>
-						今回の作成でスライドのレスポンシブ画像差し替えができるようになりました。</dd>
-						<p><a href="../../JAMAIS_FINI_LE_TEMPS/index.html">UPL : https://mikiya4080.github.io/portfolio/detail/JAMAIS_FINI/index.html</a></p>
-					</dl>
-				</div>
+	<main class="main">
+		<div class="scrol">
+			<div class="scrol_inner">
+				<h1>Works</h1>
+				<p><img src="../img/desktop_JAMAIS_FINI.png" class="desktop"></p>
+				<img src="../img/JAMAIS_FINI-page.jpg" class="full_img" alt="">
+				<h2>JAMAIS FINI LE TE MPLE</h2>
+				<dl>
+					<dd>HTML5/CSS3/Java Script/Photoshop/Illustrator</dd>
+					<dt><制作テーマ></dt><dd>架空レストラン</dd>
+					<dt><制作期間></dt><dd>2週間</dd>
+					<dt><コンセプト></dt><dd>24時間365日営業しているレストラン。<span class="css-br">ここに来て仕事をするのもよし、<br></span>自身の時間を楽しむのもよし<span class="css-br">間を気にせずゆっくりできるそんなレストラン。</span></dd>
+					<dt><コーディング></dt><dd>レスポンシブデザインを作成する際に、<br>
+					スライドの画像をレスポンシブ専用の画像に置き換えるのに苦戦しました。<br>
+					解決法としてはJqueryで動的に差し替えすることで解決できました。<br>
+					今回の作成でスライドのレスポンシブ画像差し替えができるようになりました。</dd>
+					<p><a href="../../JAMAIS_FINI_LE_TEMPS/index.html">UPL : https://mikiya4080.github.io/portfolio/detail/JAMAIS_FINI/index.html</a></p>
+				</dl>
 			</div>
 		</div>
-		<footer id="footer">
-			<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
-		</footer>		
 	</main>
+	<footer id="footer">
+		<p>Copyright ©2019 KANBARA MIKIYA All Rights Reserved.</p>
+	</footer>		
 </body>
-
 </html>
